--- a/conf/discordConnect.tml
+++ b/conf/discordConnect.tml
@@ -1,3 +1,3 @@
-clientID = "764483773567467550"
-clientSecret = "v8x7rINEqlzWPQ4ziv24jehGF3kbpOLJ"
+clientID = ""
+clientSecret = ""
 redirectURI = "http://localhost:8080/loginprocessing"
