--- a/view/index.html
+++ b/view/index.html
@@ -12,6 +12,7 @@
     {{ template "header" . }}
     {{ template "footer" . }}
     <div class="content">
+        {{.test}}
         <h1>HELLO GIN WORLD</h1>
         <h2>{{.label1}}</h2>
         <h3>{{.label2}}</h3>
